# cmapss-fd004-rul-mlops

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.ja.md  README.md  SECURITY.md  docker-compose.yml  dvc.yaml  package-lock.json  package.json  params.yaml  playwright.config.js  pyproject.toml  requirements-experimental-lock.txt  requirements-lock.txt
.dvc/: config
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: cd.yml  ci-experimental.yml  ci-stable.yml  drift-report.yml
docs/adr/: 0001-hybrid-soft-gate-routing.md  0002-inmemory-job-store.md  0003-mlflow-dvc-boundary.md  0004-public-torch-model-registry.md  0005-gbdt-full-cycle-training.md  0006-app-py-compatibility-wrapper-retirement.md
docs/architecture/: coverage-plan.md  overview.en.md  overview.md
docs/governance/: review-and-ownership.md  security-exceptions.md
docs/runbooks/: operations.ja.md  operations.md  release.md
infra/prometheus/: prometheus.yml
infra/terraform/: .terraform.lock.hcl  main.tf  outputs.tf  variables.tf
runtime/: README.md
scripts/: build_drift_baseline.py  build_fd004_benchmark_summary.py  generate_drift_report.py  promote_model.py  run_deploy_smoke.sh
src/enterprise/: audit.py  iam.py  network.py  portability.py  tenancy.py  tenant_settings.py
src/forecasting_api/: app.py  app_auth_facade.py  app_bootstrap.py  app_compat.py  app_docs.py  app_support.py  auth.py  backtest_runtime.py  client.py  client_cli.py  cmapss_family.py  cmapss_fd004.py  config.py  deployment_guard.py  errors.py  file_store.py  forecast_runtime.py  hybrid_runtime.py  hybrid_xai_uncertainty.py  job_dispatcher.py  job_store.py  job_worker.py  logging_config.py  metrics.py  mlflow_runs.py  model_promotion.py  model_registry_store.py  openapi_localization.py  request_approval.py  request_audit.py  request_middleware.py  request_policy.py  runtime_state.py  secrets_provider.py  torch_forecasters.py  torch_runtime.py  train_runtime.py  training_helpers.py
src/models/: gbdt_pipeline.py  registry.py
src/monitoring/: __init__.py  drift_detector.py
tests/: conftest.py  helpers.py
tests/e2e/: drift-baseline-flow.spec.js  forecast-ui-flow.spec.js  jobs-ui-flow.spec.js  public-api-smoke.spec.js  train-algo-restore.spec.js
tests/frontend/: billing_help_controller.test.mjs  jobs_models_controller.test.mjs  (+5 more)
(+89 files in other folders)
